<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.link.MainMenu" >
    
    <activity android:name=".MyActivity" 
       android:icon="@drawable/greenlogo" 
       android:label="@string/title" /> 

    <item
        android:id="@+id/newpost"
        android:title="@string/add_event"
        app:showAsAction="always" />    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="collapseActionView"/>
    
    <item
        android:id="@id/logout"
        android:title="@string/logout"
        app:showAsAction="collapseActionView"/>

</menu>
