<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blurrbackground"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >
    
    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="138dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/login_password"
        android:ellipsize="start" />

    <Button
        android:id="@+id/button_sign_in"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/button_sign_in" />

    <Button
        android:id="@+id/button_create_account"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_sign_in"
        android:layout_below="@+id/button_sign_in"
        android:layout_marginTop="15dp"
        android:text="@string/button_create_account" />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/login_password"
        android:layout_alignLeft="@+id/login_password"
        android:layout_marginBottom="36dp"
        android:ems="10"

        android:hint="@string/user_name" />

    <ImageView
        android:id="@+id/entry_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/user_name"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:src="@drawable/greenlogo" />

</RelativeLayout>