<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lightbackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context="com.example.link.NewPost" >
    
    <requestFocus
        android:layout_alignLeft="@+id/new_post"
        android:layout_below="@+id/new_post"
        android:layout_marginLeft="82dp"
        android:layout_marginTop="56dp" />

    <requestFocus
        android:layout_alignLeft="@+id/new_post"
        android:layout_below="@+id/new_post"
        android:layout_marginLeft="77dp"
        android:layout_marginTop="123dp" />

    <TextView
        android:id="@+id/longitudeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/longitude"
        android:layout_alignBottom="@+id/longitude"
        android:layout_alignRight="@+id/latitudeValue"
        android:text="TextView"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/new_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:text="@string/newPost"
        android:textAppearance="?android:attr/textAppearanceMedium" /> -->

    <TextView
        android:id="@+id/newPostTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/new_post"
        android:layout_below="@+id/new_post"
        android:text="Title:"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/NewPostTitleContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/latitude"
        android:layout_below="@+id/newPostTitle"
        android:ems="10" />

    <TextView
        android:id="@+id/latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/longitude"
        android:layout_below="@+id/NewPostTitleContent"
        android:text="Latitude"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/addImageBox"
        android:layout_below="@+id/latitude"
        android:text="Longitude"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <CheckBox
        android:id="@+id/addImageBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/newPostImage"
        android:layout_below="@+id/longitudeValue"
        android:text="@string/addImage" />

    <ImageView
        android:id="@+id/newPostImage"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/newPostTitle"
        android:layout_below="@+id/addImageBox"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/newPostImage"
        android:layout_below="@+id/newPostImage"
        android:text="@string/description"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/descriptionContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/description"
        android:layout_below="@id/description"
        android:ems="10"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/submitButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:text="@string/submitButton" />

    <TextView
        android:id="@+id/latitudeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/longitudeValue"
        android:layout_toRightOf="@+id/description"
        android:text="TextView"
        android:textStyle="italic" />

    <ImageView
        android:id="@+id/entry_image2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:src="@drawable/newposttext" />

</RelativeLayout>